--- a/sections/skeleton.jade
+++ b/sections/skeleton.jade
@@ -9,6 +9,7 @@ html
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1")
     title facebook.tracking.exposed
+
   body
  
     div.jumbotron
@@ -43,48 +44,45 @@ html
             li
               a(href='#what') What
             li
+              a(href='#background') Background
+            li
               a(href='#useit') Use It
             li
-              a(href='#vision') Vision
+              a(href='#getinvolved') Get involved!
             li
               a(href='#links') Links 
             li
               a(href='#about') About
             li
-              a(href='#funding') Funding
-            li
-              a(href='#defense' target='_blank') Defense
+              a(href='#thanks') Thanks
 
     div#what
       div.propaganda
-        h2 What
         block what 
+
+    div#background
+      div.propaganda
+        block background
 
     div#useit
       div.propaganda
-        h2 Use It
         block useit
 
-    div#vision
+    div#getinvolved
       div.propaganda
-        h2 Vision
-        block vision
+        block getinvolved
+
+    div#about
+      div.propaganda
+        block about
+
+    div#thanks
+      div.propaganda
+        block thanks
 
     div#links
       div.propaganda 
         h2 Links
         block links
 
-    div#about
-      div.propaganda
-        h2 About
-        block about
-
-    div#funding
-      div.propaganda
-        h2 Funding and fundraising
-        block funding
-
-    div.footer facebook.tracking.exposed is part of the tracking.exposed project, is the continuation of 
-      a(href='https://trackography.org') Trackography
-      |, on steroid
+    div.footer this website do not use cookie, but potentially can track you anyway! 
