--- a/sections/skeleton.jade
+++ b/sections/skeleton.jade
@@ -50,34 +50,40 @@ html
             li
               a(href='#getinvolved') Get involved!
             li
-              a(href='#links') Links 
-            li
               a(href='#about') About
             li
               a(href='#thanks') Thanks
+            li
+              a(href='#links') Links 
 
     div#what
       div.propaganda
+        h2 What
         block what 
 
     div#background
       div.propaganda
+        h2 Background
         block background
 
     div#useit
       div.propaganda
+        h2 Use it
         block useit
 
     div#getinvolved
       div.propaganda
+        h2 Get involved!
         block getinvolved
 
     div#about
       div.propaganda
+        h2 About
         block about
 
     div#thanks
       div.propaganda
+        h2 Thanks
         block thanks
 
     div#links
@@ -85,4 +91,4 @@ html
         h2 Links
         block links
 
-    div.footer this website do not use cookie, but potentially can track you anyway! 
+    div.footer this website do not use cookie, but potentially can tracks you anyway!
