fine tuned display

--- a/sections/generic.jade
+++ b/sections/generic.jade
@@ -54,11 +54,13 @@ block useit
     p.center Now what?
  
   div.container-fluid
-    span.container-fluid.col-md-3.niceborder This is my 
+    span.container-fluid.col-md-4.niceborder This is my 
       a(href="/") personal timeline graph
       |, I've shared willingly with anybody, if you don't share your own link, it will remain private. [This feature will become available in late August]
-    span.col-md-1
-    span.container-fluid.col-md-3.niceborder By using the RealityMeter [This feature will become available in late August], you can insert a post ID (which can be found in the URL of an individual post) and you will see how much and where that post appears in other users' feed. This can enable you to understand how much a post is promoted amongst different contributing users.
+    span.col-md-2
+    span.container-fluid.col-md-4.niceborder By using the 
+      b RealityMeter 
+      | [This feature will become available in late August], you can insert a post ID (which can be found in the URL of an individual post) and you will see how much and where that post appears in other users' feed. This can enable you to understand how much a post is promoted amongst different contributing users.
     
 block getinvolved
 
