--- a/sections/skeleton.jade
+++ b/sections/skeleton.jade
@@ -22,11 +22,11 @@ html
           | ⌁ infrastructure 
           span.red 15% 
           | ⌁ α-roadmap 
-          span.red 1/4
+          span.yellow 2/4
           | ⌁ morale 
           span.green 100% 
           | ⌁ stability 
-          span.yellow MEDIUM 
+          span.red LOW
           | ⌁ funding 
           span.red broke
 
@@ -91,4 +91,4 @@ html
         h2 Links
         block links
 
-    div.footer this website do not use cookie, but potentially can tracks you anyway!
+    div.footer 
