many updates for the slides

--- a/sections/moca.jade
+++ b/sections/moca.jade
@@ -18,15 +18,83 @@ html
     div.reveal
       div.slides
 
+        section(data-background="images/moca-2016-splash.png")
+          div.container
+            span.row.col-sm-4
+            span.row.col-sm-8
+              h2
+                facebook.tracking.exposed
+
+            span.row.col-sm-4
+            span.row.col-sm-8
+              h3
+                a(href="https://twitter.com/_vecna") Claudio @_vecna
+              p
+                #presidentialFork <3 _.extend(["kundera","rageman"],{... })
+
+        section(data-background="images/moca-2016-common.png")
+          section
+            h2 2016
+            h3 The year we won :D
+
+          section
+            h2 Linux
+            p The most used Operating System in the world
+
+          section
+            h1 WhatsApp
+            p WhatsApp has always prioritized making your data and communication as secure as possible. And today, we're proud to announce that we've completed a technological development that makes WhatsApp a leader in protecting your private communication: full end-to-end encryption. 5/April/2016
+            p
+              a(href="https://blog.whatsapp.com/10000618/end-to-end-encryption") end-to-end WA
+
+          section
+            p a.k.a. community vs corporations vs state
+            p read some 
+              a(href="https://medium.com/@_vecna/whatsapp-security-santa-or-cryptography-as-cost-reduction-40a201b46708") side effects of mass encryption deployment...
+
+        section(data-background="images/echochamber123.jpg")
+
+        section(data-background="images/filterbubble.jpg")
+
+        section
+          section
+            img(src="images/fbexperiment")
+            a(href="/slides-fbexperiment") snippet
+
+        section
+          h2 time to change!
+
+        section(data-background="images/moca-2016-common.png")
+          h1 first experiment
+          h3 (https://squirt.io)
+          p
+            a(href="/slides-background" target="_blank") Background
+
+        section(data-background="images/Mampermonkey.png")
+
+        section
+          p 
+            a(href="https://github.com/vecna/ESCVI/blob/master/userscript/facebook.tracking.exposed-0.9.6.user.js") userscript
+
+        section
+          section
+            h3 client side debug
+            p
+              img(src="images/timelinedebug.png")
+
+          section
+            h3 server side
+            p
+              img(src="images/app.png")
+
+        section(data-background="images/moca-2016-common.png")
+            a(href="https://facebook.tracking.exposed")
+    
+        section(data-background="images/wishlist.png")
+            a(href="https://facebook.tracking.exposed")
 
 
-
-
-
-
-
-
-        script(src="js/reveal-head.min.js")
-        script(src="js/reveal.min.js")
-        script(type='text/javascript').
-          Reveal.initialize({});
+    script(src="js/reveal-head.min.js")
+    script(src="js/reveal.min.js")
+    script(type='text/javascript').
+      Reveal.initialize({});
