--- a/sections/skeleton.jade
+++ b/sections/skeleton.jade
@@ -22,7 +22,7 @@ html
           | ⌁ infrastructure 
           span.red 15% 
           | ⌁ α-roadmap 
-          span.yellow 2/4
+          span.orange 2/4
           | ⌁ morale 
           span.green 100% 
           | ⌁ stability 
@@ -55,6 +55,8 @@ html
               a(href='#thanks') Thanks
             li
               a(href='#links') Links 
+            li
+              a(href='/slides-moca2016') Slides
 
     div#what
       div.propaganda
