--- a/styles/index.styl
+++ b/styles/index.styl
@@ -86,6 +86,8 @@ p
 .fontana
   font-family: museo-slab,Georgia,"Times New Roman",Times,serif  
 
+.long
+  font-size 0.8em
 
 .fb-color
   background-color #3b5999
@@ -103,4 +105,4 @@ p
   color red
 
 .yellow
-  color darkyellow
+  color orange
