did I've already completed? I've 22 minutes of time before the presentation, wtf

--- a/sections/moca.jade
+++ b/sections/moca.jade
@@ -58,19 +58,36 @@ html
 
         section
           section
-            img(src="images/fbexperiment")
+            h2 Facebook emotion manipuation
             a(href="/slides-fbexperiment") snippet
+
+          section
+            a(href="http://www.recode.net/2016/6/14/11923286/facebook-emotional-contagion-controversy-data-research-review-policy-ethics") Ethics and experiments
+            img(src="images/BravaMammaMS.png")
 
         section
           h2 time to change!
+          ul
+            li visualize the filter bubble!
+            li make the users aware of the reality distortion
+            li eventually, make the intelligence comeback to the node and not to the center
+
+        section
+          h2 no no! don't endorse FB
+          ul
+            li endorsed by public figure :(
+            li infrastructure for services (blablacar? tindr?)
+            li social isolation
+            li presence also if you don't want 
+              a(href="https://trackography.org/rich.html") Trackography January 2015
+            li who's your target as cipherpunk? as HRD? as activist?
 
         section(data-background="images/moca-2016-common.png")
-          h1 first experiment
-          h3 (https://squirt.io)
-          p
-            a(href="/slides-background" target="_blank") Background
+          a(href="/slides-background" target="_blank") Background
 
-        section(data-background="images/Mampermonkey.png")
+        section
+          img(src="images/Tampermonkey.png")
+          p GreaseMonkey / TamperMonkey
 
         section
           p 
@@ -79,20 +96,24 @@ html
         section
           section
             h3 client side debug
-            p
-              img(src="images/timelinedebug.png")
+            img(src="images/timelinedebug.png")
 
           section
             h3 server side
-            p
-              img(src="images/app.png")
+            p demo live
+
+          section
+            h3 API
+            p demo live
+
+        section
+          img(src="images/wishlist.png")
 
         section(data-background="images/moca-2016-common.png")
-            a(href="https://facebook.tracking.exposed")
-    
-        section(data-background="images/wishlist.png")
-            a(href="https://facebook.tracking.exposed")
+            a(href="https://facebook.tracking.exposed") facebook.tracking.exposed
 
+        section
+          h1 ઉ
 
     script(src="js/reveal-head.min.js")
     script(src="js/reveal.min.js")
