approaching a generalisation of 'slides' section

--- a/sections/moca.jade
+++ b/sections/moca.jade
@@ -107,7 +107,7 @@ html
             p demo live
 
         section
-          img(src="images/wishlist.png")
+          img(src="images/wishlist.jpg")
 
         section(data-background="images/moca-2016-common.png")
             a(href="https://facebook.tracking.exposed") facebook.tracking.exposed
