restructured staticpages management

--- a/sections/generic.jade
+++ b/sections/generic.jade
@@ -13,7 +13,9 @@ block background
 
   p Along with Facebook’s ascension, we have seen the development of a new kind of editorial line based on our profiles. This new editorial line exploits the vulnerabilities of every user, as each user is profiled and quantified by their experience, interests, friendships, or lack thereof. Guaranteeing the ability of the people to exert their critical judgement of the news is my goal, and for this reason, I developed facebook.tracking.exposed.
 
-  p Perhaps someone will wonder if my project violates the Terms of Service of Mark Zuckerberg’s platform. I don’t really care. From Facebook, I am extracting only metadata, the only thing that is truly necessary to begin the investigation. After all, “it’s only metadata.”
+  p Perhaps someone will wonder if my project violates the Terms of Service of Mark Zuckerberg’s platform. I don’t really care. From Facebook, I am extracting only metadata, the only thing that is truly necessary to begin the investigation. After all, “
+    span.italic it’s only metadata
+    |”
 
   p The scope of the project is to visualize the impact of algorithms over the perception of reality. We, citizen and user, are influenced by the information to which we are subjected. It is impossible for a person alone to understand Facebook’s logic, and its effects on society. For this reason I want to enable an open community of user, citizen, researcher, and journalist, because only together can they understand if the influence of the algorithm is in our interest. I don’t believe so. I hope that the user will someday be able to develop, choose, share, or even sell the algorithm they want to use, and that the platform will simply become a means of data transit.
 
@@ -42,7 +44,7 @@ block useit
     a(href="https://openuserjs.org/about/Userscript-Beginners-HOWTO") UserScript
     |.
   
-  p Done! You will see the following symbol ઉ  and clicking on it will lead you to your personal page. [This feature will become available in late August]
+  p Done! You will see the following symbol ઉ and clicking on it will lead you to your personal page.
 
   p.small
     b Details:
@@ -55,12 +57,13 @@ block useit
  
   div.container-fluid
     span.container-fluid.col-md-4.niceborder This is my 
-      a(href="/") personal timeline graph
-      |, I've shared willingly with anybody, if you don't share your own link, it will remain private. [This feature will become available in late August]
+      a(href="/realitycheck/100005961541729") personal timeline graph
+      |, I've shared willingly with anybody, if you don't share your own link, it will remain private.
     span.col-md-2
     span.container-fluid.col-md-4.niceborder By using the 
-      b RealityMeter 
-      | [This feature will become available in late August], you can insert a post ID (which can be found in the URL of an individual post) and you will see how much and where that post appears in other users' feed. This can enable you to understand how much a post is promoted amongst different contributing users.
+      b
+        a(href="/realitymeter/" target="_blank") RealityMeter
+      |, you can insert a post ID (which can be found in the URL of an individual post) and you will see how much and where that post appears in other users' feed. This can enable you to understand how much a post is promoted amongst different contributing users.
     
 block getinvolved
 
@@ -95,7 +98,7 @@ block thanks
 
   p This project would be impossible without the help of the network. I encourage you to get in touch, and 
     a(href="#getinvolved") get involved
-    |!
+    a(href="/overseer") !
 
 block links
 
