--- a/sections/overseer.jade
+++ b/sections/overseer.jade
@@ -1,11 +1,17 @@
 doctype html
 html
   head
-    link(rel='stylesheet', href='/css/bootstrap.css')
     link(rel='stylesheet', href='/css/index.css')
-    title ↺ data overseer ↺
+    link(rel='stylesheet', href='/css/bootstrap.css')
+    title ઉ data Overseer
 
   body
   
-  .container-fluid.center.col-md-12
-    TO BE DONE!
+  .container-fluid
+    .jumbotron Overseer
+
+  .container-fluid
+    .propaganda
+      p This page is intended to tell publicly open data about the meta data owner by this node. To ensure cooperation and data sharing, who runs the service receive the user timeline, and through API other researcher can access over it.
+      p A privacy risk assessment has still to be done. The information returned has to be pseudo-anonymized hashing the usedId of the contributor; This is not yet done.
+
