--- a/sections/skeleton.jade
+++ b/sections/skeleton.jade
@@ -56,7 +56,7 @@ html
             li
               a(href='#links') Links 
             li
-              a(href='/slides-moca2016') Slides
+              a(href='/slides-long') Slides
 
     div#what
       div.propaganda
