--- a/styles/index.styl
+++ b/styles/index.styl
@@ -29,6 +29,7 @@ p
     padding-left: 0.1em
 
 .smaller
+  font-weight bold
   font-size 0.75em
   color darkgrey
 
@@ -106,3 +107,6 @@ p
 
 .yellow
   color orange
+
+.italic
+  font-style italic
